# catkin_ws_robot

./: .gitignore  README.md  launch.sh  test_navigation.sh
src/add_markers/: CMakeLists.txt  package.xml
src/add_markers/launch/: add_markers.launch  view_navigation.launch
src/add_markers/src/: add_markers.cpp
src/map/: myworld.pgm  myworld.world  myworld.yaml
src/media/materials/scripts/: material1.material  material2.material  material3.material  material4.material  material5.material
src/pick_objects/: CMakeLists.txt  package.xml
src/pick_objects/launch/: pick_objects.launch
src/pick_objects/msg/: NavigationTarget.msg
src/pick_objects/src/: pick_objects.cpp
src/rvizConfig/: config_file.rviz
src/scripts/: add_markers.sh  home_service.sh  launch.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
