<?xml version="1.0"?>
<package format="2">
  <name>add_markers</name>
  <version>0.0.0</version>
  <description>Package to visualize markers on RVIZ</description>

  <maintainer email="g.remigi@kineticsystem.org">Giovanni Remigi</maintainer>
  <author email="g.remigi@kineticsystem.org">Giovanni Remigi</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pick_objects</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pick_objects</exec_depend>

</package>
